src/transpiler/ParLatte.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.0.2 from ParLatte.y
-----------------------------------------------------------------------------

state 77 contains 1 shift/reduce conflicts.
state 148 contains 1 shift/reduce conflicts.

rule 46 is unused
rule 47 is unused
rule 48 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> FnDef                                    (5)
	TopDef -> 'class' Ident '{' ListClassMember '}'    (6)
	TopDef -> 'class' Ident 'extends' Ident '{' ListClassMember '}'   (7)
	FnDef -> Type Ident '(' ListArg ')' Block          (8)
	Arg -> Type Ident                                  (9)
	ClassMember -> Type Ident ';'                      (10)
	ClassMember -> FnDef                               (11)
	ListTopDef -> TopDef                               (12)
	ListTopDef -> TopDef ListTopDef                    (13)
	ListArg ->                                         (14)
	ListArg -> Arg                                     (15)
	ListArg -> Arg ',' ListArg                         (16)
	ListClassMember ->                                 (17)
	ListClassMember -> ClassMember ListClassMember     (18)
	Block -> '{' ListStmt '}'                          (19)
	Stmt -> ';'                                        (20)
	Stmt -> Block                                      (21)
	Stmt -> Type ListItem ';'                          (22)
	Stmt -> Expr '=' Expr ';'                          (23)
	Stmt -> Expr '++' ';'                              (24)
	Stmt -> Expr '--' ';'                              (25)
	Stmt -> 'return' Expr ';'                          (26)
	Stmt -> 'return' ';'                               (27)
	Stmt -> 'if' '(' Expr ')' Stmt                     (28)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (29)
	Stmt -> 'while' '(' Expr ')' Stmt                  (30)
	Stmt -> 'for' '(' Type Ident ':' Expr ')' Stmt     (31)
	Stmt -> Expr ';'                                   (32)
	Item -> Ident                                      (33)
	Item -> Ident '=' Expr                             (34)
	ListStmt ->                                        (35)
	ListStmt -> Stmt ListStmt                          (36)
	ListItem -> Item                                   (37)
	ListItem -> Item ',' ListItem                      (38)
	Type -> 'int'                                      (39)
	Type -> 'char'                                     (40)
	Type -> 'string'                                   (41)
	Type -> 'boolean'                                  (42)
	Type -> 'void'                                     (43)
	Type -> Type '[]'                                  (44)
	Type -> Ident                                      (45)
	ListType ->                                        (46)
	ListType -> Type                                   (47)
	ListType -> Type ',' ListType                      (48)
	Expr7 -> Ident                                     (49)
	Expr7 -> Integer                                   (50)
	Expr7 -> 'null'                                    (51)
	Expr7 -> 'true'                                    (52)
	Expr7 -> 'false'                                   (53)
	Expr7 -> String                                    (54)
	Expr7 -> 'cast<' Type '>' '(' Expr ')'             (55)
	Expr7 -> 'new' Type                                (56)
	Expr7 -> 'new' Type '[' Expr ']'                   (57)
	Expr7 -> '(' Expr ')'                              (58)
	Expr6 -> Expr6 '(' ListExpr ')'                    (59)
	Expr6 -> Expr6 '.' Ident                           (60)
	Expr6 -> Expr6 '[' Expr ']'                        (61)
	Expr6 -> Expr7                                     (62)
	Expr5 -> '-' Expr6                                 (63)
	Expr5 -> '!' Expr6                                 (64)
	Expr5 -> Expr6                                     (65)
	Expr4 -> Expr4 MulOp Expr5                         (66)
	Expr4 -> Expr5                                     (67)
	Expr3 -> Expr3 AddOp Expr4                         (68)
	Expr3 -> Expr4                                     (69)
	Expr2 -> Expr2 RelOp Expr3                         (70)
	Expr2 -> Expr3                                     (71)
	Expr1 -> Expr2 '&&' Expr1                          (72)
	Expr1 -> Expr2                                     (73)
	Expr -> Expr1 '||' Expr                            (74)
	Expr -> Expr1                                      (75)
	ListExpr ->                                        (76)
	ListExpr -> Expr                                   (77)
	ListExpr -> Expr ',' ListExpr                      (78)
	AddOp -> '+'                                       (79)
	AddOp -> '-'                                       (80)
	MulOp -> '*'                                       (81)
	MulOp -> '/'                                       (82)
	MulOp -> '%'                                       (83)
	RelOp -> '<'                                       (84)
	RelOp -> '<='                                      (85)
	RelOp -> '>'                                       (86)
	RelOp -> '>='                                      (87)
	RelOp -> '=='                                      (88)
	RelOp -> '!='                                      (89)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'.'            { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	'[]'           { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'boolean'      { PT _ (TS _ 26) }
	'cast<'        { PT _ (TS _ 27) }
	'char'         { PT _ (TS _ 28) }
	'class'        { PT _ (TS _ 29) }
	'else'         { PT _ (TS _ 30) }
	'extends'      { PT _ (TS _ 31) }
	'false'        { PT _ (TS _ 32) }
	'for'          { PT _ (TS _ 33) }
	'if'           { PT _ (TS _ 34) }
	'int'          { PT _ (TS _ 35) }
	'new'          { PT _ (TS _ 36) }
	'null'         { PT _ (TS _ 37) }
	'return'       { PT _ (TS _ 38) }
	'string'       { PT _ (TS _ 39) }
	'true'         { PT _ (TS _ 40) }
	'void'         { PT _ (TS _ 41) }
	'while'        { PT _ (TS _ 42) }
	'{'            { PT _ (TS _ 43) }
	'||'           { PT _ (TS _ 44) }
	'}'            { PT _ (TS _ 45) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6, 7
	FnDef           rule  8
	Arg             rule  9
	ClassMember     rules 10, 11
	ListTopDef      rules 12, 13
	ListArg         rules 14, 15, 16
	ListClassMember rules 17, 18
	Block           rule  19
	Stmt            rules 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32
	Item            rules 33, 34
	ListStmt        rules 35, 36
	ListItem        rules 37, 38
	Type            rules 39, 40, 41, 42, 43, 44, 45
	ListType        rules 46, 47, 48
	Expr7           rules 49, 50, 51, 52, 53, 54, 55, 56, 57, 58
	Expr6           rules 59, 60, 61, 62
	Expr5           rules 63, 64, 65
	Expr4           rules 66, 67
	Expr3           rules 68, 69
	Expr2           rules 70, 71
	Expr1           rules 72, 73
	Expr            rules 74, 75
	ListExpr        rules 76, 77, 78
	AddOp           rules 79, 80
	MulOp           rules 81, 82, 83
	RelOp           rules 84, 85, 86, 87, 88, 89

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'boolean'      shift, and enter state 9
	'char'         shift, and enter state 10
	'class'        shift, and enter state 11
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	'void'         shift, and enter state 14
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Program        goto state 4
	TopDef         goto state 5
	FnDef          goto state 6
	ListTopDef     goto state 7
	Type           goto state 8

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'extends'      reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	L_Ident        reduce using rule 1


State 3

	Type -> Ident .                                     (rule 45)

	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           reduce using rule 45
	'('            reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	'++'           reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'--'           reduce using rule 45
	'.'            reduce using rule 45
	'/'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'='            reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'['            reduce using rule 45
	'[]'           reduce using rule 45
	']'            reduce using rule 45
	'||'           reduce using rule 45
	L_Ident        reduce using rule 45


State 4

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 5

	ListTopDef -> TopDef .                              (rule 12)
	ListTopDef -> TopDef . ListTopDef                   (rule 13)

	'boolean'      shift, and enter state 9
	'char'         shift, and enter state 10
	'class'        shift, and enter state 11
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	'void'         shift, and enter state 14
	L_Ident        shift, and enter state 2
	%eof           reduce using rule 12

	Ident          goto state 3
	TopDef         goto state 5
	FnDef          goto state 6
	ListTopDef     goto state 18
	Type           goto state 8

State 6

	TopDef -> FnDef .                                   (rule 5)

	'boolean'      reduce using rule 5
	'char'         reduce using rule 5
	'class'        reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	L_Ident        reduce using rule 5
	%eof           reduce using rule 5


State 7

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 8

	FnDef -> Type . Ident '(' ListArg ')' Block         (rule 8)
	Type -> Type . '[]'                                 (rule 44)

	'[]'           shift, and enter state 17
	L_Ident        shift, and enter state 2

	Ident          goto state 16

State 9

	Type -> 'boolean' .                                 (rule 42)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	'&&'           reduce using rule 42
	'('            reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	'++'           reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'--'           reduce using rule 42
	'.'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'='            reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'['            reduce using rule 42
	'[]'           reduce using rule 42
	']'            reduce using rule 42
	'||'           reduce using rule 42
	L_Ident        reduce using rule 42


State 10

	Type -> 'char' .                                    (rule 40)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	'('            reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	'++'           reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'--'           reduce using rule 40
	'.'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'='            reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'['            reduce using rule 40
	'[]'           reduce using rule 40
	']'            reduce using rule 40
	'||'           reduce using rule 40
	L_Ident        reduce using rule 40


State 11

	TopDef -> 'class' . Ident '{' ListClassMember '}'    (rule 6)
	TopDef -> 'class' . Ident 'extends' Ident '{' ListClassMember '}'    (rule 7)

	L_Ident        shift, and enter state 2

	Ident          goto state 15

State 12

	Type -> 'int' .                                     (rule 39)

	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&&'           reduce using rule 39
	'('            reduce using rule 39
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	'++'           reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'--'           reduce using rule 39
	'.'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'='            reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'['            reduce using rule 39
	'[]'           reduce using rule 39
	']'            reduce using rule 39
	'||'           reduce using rule 39
	L_Ident        reduce using rule 39


State 13

	Type -> 'string' .                                  (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	'('            reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	'++'           reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'--'           reduce using rule 41
	'.'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'='            reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'['            reduce using rule 41
	'[]'           reduce using rule 41
	']'            reduce using rule 41
	'||'           reduce using rule 41
	L_Ident        reduce using rule 41


State 14

	Type -> 'void' .                                    (rule 43)
